test/ui/tests/lengthy-type-mismatch.lushui
;;; TEST fail check

use extern.core.(tuple.Tuple list.List int.Int unit.Unit function.identity)

it: Tuple (
    List.cons Type Int
    (List.cons Type Unit
    (List.cons Type Int
        (List.empty Type))))
    =
    Tuple.cons
        Int (List.cons Type Unit (List.cons Type Int (List.empty Type)))
        Int.-87 (Tuple.cons
            Unit (List.cons Type Type (List.empty Type))
            (identity Unit Unit.unit) (Tuple.cons
                Int (List.empty Type) Int.91
                    Tuple.empty))
